Added the ul for the answer choices

--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,12 @@
     font-size: 32px;
 }
 
+/*Quiz Questions Section*/
+ul {
+    list-style-type: none;
+    text-align: center;
+   }
+
 /*Start Quiz Button*/
 #start-quiz-button{
     background-color: purple;
