Added the other HTML sections and hid them

--- a/assets/style.css
+++ b/assets/style.css
@@ -46,19 +46,9 @@ h2 {
     
 }
 
-/* #a, #b, #c, #d{
-    list-style-type: none;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    display: flex;
-} */
-
-
 .quiz-content{
     display: none;
 }
-   
 
 /*Start Quiz Button*/
 #start-quiz-button, #submit-quiz-button{
@@ -70,6 +60,21 @@ h2 {
     justify-content: center;
     align-items: center;
 }
+
+/*Save Score */
+.save-score{
+    display: none;
+}
+
+/* Score History */
+.score-history{
+    display: none;
+}
+
+/*Score History Page*/
+/* display: flex;
+    align-items: center;
+    justify-content: center; */
 
 /* Footer */
 footer{
